Removing CraftTweaker Support
Honestly am sick of making a poor attempt at keeping this alive so im
retiring it instead.

And no, it was not fun while it lasted. Not for me anyway.

Datapacks are the proper supported way, if you have a problem with that
too bad.